# bazoola

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  db.py  main.py  pyproject.toml  update_description.sh
.github/workflows/: ci.yml  concurrency-stress-test.yml  publish-test.yml  publish.yml
bazoola/: __init__.py  cond.py  const.py  db.py  fields.py  join.py  storage.py  table.py
demo/: README.md  app.py  sample_data.py  schema.py
demo/templates/: base.html  index.html  project_detail.html  project_form.html  projects.html  search.html  task_detail.html  task_form.html  tasks.html  user_form.html  users.html
tests/: common.py  conftest.py  test_concurrency.py  test_main.py  util.py
